--- a/package.json
+++ b/package.json
@@ -1,72 +1,17 @@
 {
-	"name": "swr-loader",
-	"version": "0.2.1",
-	"description": "ux-centric data loading and caching",
-	"main": "./dist/index.js",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-			"require": "./dist/index.js",
-			"import": "./dist/index.mjs",
-			"types": "./dist/index.d.ts"
-		},
-		"./react": {
-			"require": "./dist/react/index.js",
-			"import": "./dist/react/index.mjs",
-			"types": "./dist/react/index.d.ts"
-		},
-		"./adapters/idb": {
-			"require": "./dist/adapters/idb.js",
-			"import": "./dist/adapters/idb.mjs",
-			"types": "./dist/adapters/idb.d.ts"
-		},
-		"./adapters/zustand": {
-			"require": "./dist/adapters/zustand.js",
-			"import": "./dist/adapters/zustand.mjs",
-			"types": "./dist/adapters/zustand.d.ts"
-		}
-	},
-	"files": [
-		"dist"
-	],
+	"private": true,
 	"scripts": {
-		"build": "tsup",
-		"release": "bun run build && changeset publish"
-	},
-	"keywords": [
-		"react",
-		"react-router",
-		"react-router-dom",
-		"remix",
-		"remix-router"
-	],
-	"author": "fredericoo",
-	"license": "ISC",
-	"peerDependencies": {
-		"react": ">= 17",
-		"react-router-dom": ">= 6.4.0",
-		"typescript": ">= 4.9",
-		"zustand": ">= 4"
+		"build": "turbo run build",
+		"dev": "turbo run dev",
+		"lint": "turbo run lint",
+		"format": "prettier --write \"**/*.{ts,tsx,md}\""
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.26.2",
-		"@happy-dom/global-registrator": "^11.0.6",
-		"@testing-library/react": "^14.0.0",
-		"@types/node": "^20.6.1",
-		"bun-types": "^1.0.1",
-		"eslint": "^8.45.0",
-		"expect-type": "^0.16.0",
-		"happy-dom": "^11.0.6",
-		"idb": "^7.1.1",
+		"eslint": "^8.42.0",
 		"prettier": "^3.0.0",
-		"react": "^18.2.0",
-		"react-router-dom": "^6.16.0",
-		"tsup": "^7.1.0",
-		"typescript": "^5.1.6",
-		"remeda": "^1.26.0"
+		"turbo": "^1.10.7",
+		"typescript": "5.0.4"
 	},
-	"dependencies": {
-		"zustand": "^4.4.1"
-	}
+	"packageManager": "pnpm@7.15.0",
+	"name": "swr-loader-monorepo"
 }
