--- a/examples/vite-react/package.json
+++ b/examples/vite-react/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "vite",
+	"name": "example-vite",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -29,6 +29,6 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"typescript": "^5.0.2",
-		"vite": "^4.4.5"
+		"vite": "^4.4.9"
 	}
 }
