fix(ci): release script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "turbo run build",
 		"dev": "turbo run dev",
 		"lint": "turbo run lint",
+		"release": "turbo run release",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\""
 	},
 	"devDependencies": {
